--- a/inedx.html
+++ b/inedx.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=S, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>hejjjjjjjjjjjj</h1>
+    <buttin>lajshhsa ssjsshddand</buttin>
+    <p>nsdndssjsjsjsjd</p>
+</body>
+
+</html>
